apps/media/jellyfin/euclid-jellyfin.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: euclid-jellyfin
  namespace: jellyfin
  labels:
    kubernetes.io/service-name: euclid-jellyfin
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
      - 192.168.1.228
    conditions:  # https://github.com/argoproj/argo-cd/issues/15554
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: euclid-jellyfin
  namespace: jellyfin
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: euclid-jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jf-euclid.stonegarden.dev`)
      kind: Rule
      services:
        - name: euclid-jellyfin
          port: 80
