apps/media/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jellyfin-http-route
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "jellyfin.stonegarden.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin-svc
          port: 8096
