apps/media/jellyfin/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.stonegarden.dev`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
